<resources>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_not_connected">Not Connected</string>
    <string name="drawer_server">All Channels</string>
    <string name="drawer_info">Information</string>
    <string name="drawer_tokens">Access Tokens</string>
    <string name="drawer_pinned">Pinned Channels</string>
    <string name="drawer_header_servers">Servers</string>
    <string name="drawer_favorites">Favorites</string>
    <string name="drawer_lan">LAN</string>
    <string name="drawer_public">Public Servers</string>
    <string name="chat_message_tree">(Tree)</string>
    <string name="chat_message_channel">(Channel)</string>
    <string name="chat_message_to">%1$s → %2$s</string>
    <string name="chat_message_tts_short_link">(Link to %1$s)</string>
    <string name="user_menu_admin">Admin</string>
    <string name="user_menu_kick">Kick</string>
    <string name="user_menu_ban">Ban</string>
    <string name="user_menu_mute">Mute</string>
    <string name="user_menu_deafen">Deafen</string>
    <string name="user_menu_move">Move</string>
    <string name="user_menu_priority_speaker">Priority Speaker</string>
    <string name="user_menu_local_mute">Local Mute</string>
    <string name="user_menu_ignore_messages">Ignore Messages</string>
    <string name="user_menu_change_comment">Change Comment</string>
    <string name="user_menu_view_comment">View Comment</string>
    <string name="user_menu_reset_comment">Reset Comment</string>
    <string name="user_menu_send_message">Send Message</string>
    <string name="user_menu_information">Information</string>
    <string name="user_menu_register">Register</string>
    <string name="user_menu_registered">Registered</string>
    <string name="channel_menu_pin">Pin</string>
    <string name="comment_view">DISPLAY</string>
    <string name="comment_edit_source">EDIT SOURCE</string>
    <string name="comment_view_source">VIEW SOURCE</string>
    <string name="control_channel">Control channel</string>
    <string name="tcp_encryption_mode">Encrypted with 256 bit AES256-SHA</string>
    <string name="voice_channel">Voice channel</string>
    <string name="udp_encryption_mode">Encrypted with 128 bit OCB-AES128</string>
    <string name="audio_bandwidth">Audio bandwidth</string>
    <string name="server_info_protocol">Protocol %s.</string>
    <string name="server_info_version">%1$s (%2$s)</string>
    <string name="server_info_latency">%.2f ms latency</string>
    <string name="server_info_host">Remote host %1$s (port %2$d)</string>
    <string name="server_info_codec">Codec: %s</string>
    <string name="server_info_max_bandwidth">Maximum %.1f kbit/s</string>
    <string name="server_info_current_bandwidth">Current %.1f kbit/s</string>
    <string name="server_match">Find Server</string>
    <string name="server_match_progress">Finding a server…</string>
    <string name="server_match_found">Server found</string>
    <string name="server_match_not_found">Couldn\'t find server</string>
    <string name="server_match_expand_country">Couldn\'t find any optimal servers in your country. Expand search worldwide?</string>
    <string name="server_match_info">Name: %1$s\nHost: %2$s:%3$d\nUsers: %4$d / %5$d\nVersion: %6$s \nCountry: %7$s \nLatency: %8$d ms</string>
    <string name="server_match_description">Plumble can automatically find you an empty server, optimizing based on the server\'s location, version, and latency.</string>
    <string name="channels">Channels</string>
    <string name="no_servers">No servers added.\nPress the \'add\' button on the action bar to begin.</string>
    <string name="server_add">Add Server</string>
    <string name="server_password">Password</string>
    <string name="server_username">Username</string>
    <string name="server_port">Port</string>
    <string name="server_host">Address</string>
    <string name="server_label">Label</string>
    <string name="connecting">Connecting</string>
    <string name="connecting_to_server">Connecting to %1$s:%2$s</string>
    <string name="fragment_chat">Chat</string>
    <string name="fragment_channel">Channel</string>
    <string name="menu_settings">Settings</string>
    <string name="ptt">PUSH TO TALK</string>
    <string name="mute">Mute</string>
    <string name="deafen">Deafen</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnectSure">Are you sure you want to disconnect from Mumble?</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="preferences">Preferences</string>
    <string name="togglelocalmute">Toggle Local Mute</string>
    <string name="chat">Chat</string>
    <string name="perm_denied">Permission denied!</string>
    <string name="connectionRefused">Connection Refused</string>
    <string name="confirm_delete_server">Are you sure you want to delete this server?</string>
    <string name="confirm_delete_channel">Are you sure you want to delete this channel?</string>
    <string name="disconnected">Disconnected</string>
    <string name="kicked_message">Kicked from server.\nReason: %s</string>
    <string name="loading">Loading…</string>
    <string name="reset_key">Reset Key</string>
    <string name="externalStorageUnavailable">External storage unavailable, cannot load certificate</string>
    <string name="addFavorite">Add Favorite</string>
    <string name="removeFavorite">Remove Favorite</string>
    <string name="viewFavorites">View Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="favoriteRemoved">Favorite removed.</string>
    <string name="favoriteAdded">Favorite added.</string>
    <string name="noFavorites">No favorited channels.</string>
    <string name="accessTokens">Access Tokens</string>
    <string name="accessAdd">Add Access Token</string>
    <string name="pushToTalkHint">(tick checkbox to enable toggle)</string>
    <string name="messageReceived">New message</string>
    <string name="generateCert">Generate Certificate</string>
    <string name="generateCertSuccess">Your certificate has been set and saved as %s!</string>
    <string name="generateCertFailure">Failed to generate certificate.</string>
    <string name="generateCertProgress">Generating certificate…</string>
    <string name="search">Search</string>
    <string name="searchHint">Search channels and users</string>
    <string name="undocumentedWakeLock">Unfortunately, it doesn\'t look like we can provide proximity sensor wake lock support for your device. Please change the call mode to speakerphone.</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="recordingVolume">Recording Volume Boost</string>
    <string name="quickConnect">Quick Connect</string>
    <string name="connect">Connect</string>
    <string name="connectToServer">Connect to Server</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="messageToUser">Type message to user \'%s\'</string>
    <string name="messageToChannel">Type message to channel \'%s\' here</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="clearChat">Clear Chat</string>
    <string name="connected">Connected</string>
    <string name="plumbleConnected">Plumble Connected</string>
    <string name="plumbleConnecting">Plumble Connecting</string>
    <string name="plumbleDisconnected">Plumble Disconnected</string>
    <string name="lostConnection">Lost connection to the server.</string>
    <string name="resume">Resume</string>
    <string name="channel">Channel</string>
    <string name="user">User</string>
    <string name="server">Server</string>
    <string name="chat_notify_moved">%1$s moved in from %2$s by %3$s.</string>
    <string name="chat_notify_muted_deafened">Muted and deafened.</string>
    <string name="chat_notify_muted">Muted.</string>
    <string name="chat_notify_unmuted">Unmuted.</string>
    <string name="chat_notify_unmuted_undeafened">Unmuted and undeafened.</string>
    <string name="chat_notify_now_muted_deafened">%s is now muted and deafened.</string>
    <string name="chat_notify_now_muted">%s is now muted.</string>
    <string name="chat_notify_now_unmuted">%s is now unmuted.</string>
    <string name="chat_notify_now_unmuted_undeafened">%s is now unmuted and undeafened.</string>
    <string name="chat_notify_connected">%s connected.</string>
    <string name="chat_notify_disconnected">%s disconnected.</string>
    <string name="unknown">Unknown</string>
    <string name="server_list_title_favorite">Favourites</string>
    <string name="server_list_title_lan">LAN</string>
    <string name="server_list_title_public_internet">Public Internet</string>
    <string name="ping">Ping</string>
    <string name="sort">Sort</string>
    <string name="sortBy">Sort by…</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="shareMessage">Join this Mumble server with Plumble! %s</string>
    <string name="noServerInfo">Ping to fetch info</string>
    <string name="status_notify_muted_and_deafened">Muted and deafened.</string>
    <string name="status_notify_muted">Muted.</string>
    <string name="comment">Comment</string>
    <string name="close">Close</string>
    <string name="retrieving">Retrieving…</string>
    <string name="search_name">Name</string>
    <string name="search_country">Country</string>
    <string name="preferences_immutable">This setting cannot be changed while connected to a server.</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="fullscreen_chat">Chat</string>
    <string name="fullscreen_channel">Channel</string>
    <string name="fetchingServers">Please wait, fetching list of public servers.</string>
    <string name="information">Information</string>
    <string name="register">Register Self</string>
    <string name="userControl">User Control</string>
    <string name="registerSelfSuccess">Sent registration request</string>
    <string name="error_fetching_servers">Error fetching servers!\nCheck your internet connection.</string>
    <string name="coming_soon">This feature is coming soon.</string>
    <string name="search_channel_users">%d users</string>
    <string name="reconnecting">Reconnecting in %d seconds.</string>
    <string name="tapToReconnect">Tap to reconnect</string>
    <string name="overlay">Overlay</string>
    <string name="hint_reason">Reason</string>
    <string name="hint_ptt">Push to Talk</string>
    <string name="hint_ptt_summary">Simply press this button down to talk. Double-tap to toggle it.</string>
    <string name="hint_server_add">Welcome to Plumble</string>
    <string name="hint_server_add_summary">To begin, add a favourite server by pressing the add button on the action bar.</string>
    <string name="hint_switching">Switching Between Views</string>
    <string name="hint_switching_summary">Switch between the chat and channel views by using the buttons in the top left, or swiping.</string>
    <string name="action_settings">Settings</string>
    <string name="reconnect">Reconnect</string>
    <string name="reconnect_dialog_message">You are already connected to a server. Connect to this server instead?</string>
    <string name="confirm_reset_comment">Are you sure you want to reset the comment of user %s?</string>
    <string name="confirm">Confirm</string>
    <string name="channel_menu_view_description">View Description</string>
    <string name="channel_join">Join</string>
    <string name="context_channel_link">Link</string>
    <string name="context_channel_unlink_all">Unlink All</string>
    <string name="context_channel_shout">Set Voice Target</string>
</resources>