<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 Andrew Comminos
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_channel_add" android:title="@string/add"/>
    <item android:id="@+id/menu_channel_edit" android:title="@string/edit"/>
    <item android:id="@+id/menu_channel_remove" android:title="@string/remove"/>
    <item android:id="@+id/menu_channel_send_message" android:checkable="true" android:title="@string/user_menu_send_message"/>
    <item android:id="@+id/menu_channel_pin" android:checkable="true" android:title="@string/channel_menu_pin"/>
</menu>