<!--
  ~ Copyright (C) 2014 Andrew Comminos
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:plumble="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_mute_button" android:title="@string/mute" plumble:showAsAction="ifRoom" android:icon="@drawable/ic_action_microphone"></item>
    <item android:id="@+id/menu_deafen_button" android:title="@string/deafen" plumble:showAsAction="ifRoom" android:icon="@drawable/ic_action_audio"></item>
    <item android:id="@+id/menu_search" android:title="@string/search" plumble:actionViewClass="android.support.v7.widget.SearchView" plumble:showAsAction="ifRoom|collapseActionView" android:icon="@drawable/ic_action_search"></item>
    <item android:id="@+id/menu_bluetooth" android:title="@string/bluetooth" android:checkable="true" plumble:showAsAction="never"></item>
</menu>
