<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Andrew Comminos
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:plumble="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/menu_match_server" android:title="@string/server_match" android:icon="@drawable/ic_action_match" plumble:showAsAction="ifRoom" android:orderInCategory="0"/>
    <item android:id="@+id/menu_sort_server_item" android:title="@string/sort" android:icon="@drawable/ic_action_sort" plumble:showAsAction="ifRoom" android:orderInCategory="2"></item>
    <item android:id="@+id/menu_search_server_item" android:title="@string/search" android:icon="@drawable/ic_action_search" plumble:showAsAction="ifRoom" android:orderInCategory="1"></item>

</menu>